--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <script type="module">
             import { LitElement, html, css } from 'https://unpkg.com/lit-element@2.2.1/lit-element.js?module';
             import interact from 'https://cdn.interactjs.io/v1.10.11/interactjs/index.js'
-            import plantData from '/plantDataArray.json' assert { type: "json" };
+            import plantData from '/mischkulturBuilder/plantDataArray.json' assert { type: "json" };
 
             class MyGarden extends LitElement {
                 static get styles() {
